🩹 style fix: spacing correction

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,7 +90,7 @@ h1{
     display: flex;
     justify-content: center;
     width: 100%;
-    padding-bottom: 50px;
+    padding: 10px 0 50px 0;
     flex-direction: row;
     justify-content: space-evenly;
 }
